<resources>

    <!-- Titles -->
    <string name="title_login">Welcome to BrickHack 6</string>

    <!-- Buttons -->
    <string name="btn_login">Login with brickhack.io</string>

    <string name="app_name">BrickHack</string>
    <string name="login_button">LOGIN WITH BRICKHACK.IO»</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="wristband">Scan</string>
    <string name="history">Scan History</string>
    <string name="attendees">Questionnaires</string>
    <string name="currentTagDefault">None</string>
    <string name="denials">DENIALS</string>
    <string name="applications">APPLICATIONS</string>
    <string name="confirmations">CONFIRMATIONS</string>
    <string name="tag">Tag:</string>
    <string name="scan">Scan</string>
    <string name="history1">history</string>
    <string name="brickhack">BrickHack</string>

    <string name="facebook_app_id">2500640956722703</string>
    <string name="fb_login_protocol_scheme">fb2500640956722703</string>

    <string name="title_activity_manage_attendees">ManageAttendees</string>
    <string name="bhlogo_description">BrickHack Logo</string>
    <string name="scanNotReady" />
    <string name="denials_default">0</string>
    <string name="applications_default">0</string>
    <string name="confirmations_default">0</string>

    <string name="error_dialog_title">An Issue Occurred</string>
    <string name="error_dialog_message">You may not have permission</string>

    <string name="brickhack_logo">BrickHack Logo</string>
    <string name="brickhack_date">February 8–9, 2020</string>
    <string name="brickhack_location">Gordon Field House, RIT</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Signin with brickhack.io</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_maps">Map</string>
    <string name="forget_password">Forget Password</string>
    <string name="welcome">Welcome,</string>
    <string name="placeholder_name">PlaceHolder Name</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_school">School</string>
    <string name="hint_email">Email</string>


</resources>
