<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Wristband">

    <include
        android:id="@+id/include"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="350dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.561">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">

            <TextView
                android:id="@+id/text_Dinner"
                android:layout_width="220dp"
                android:layout_height="81dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/currentTagDefault"
                android:textAlignment="center"
                android:textColor="@color/orange"
                android:textSize="45sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.077" />

            <View
                android:id="@+id/view"
                android:layout_width="270dp"
                android:layout_height="1.5dp"
                android:layout_marginStart="28dp"
                android:layout_marginTop="3dp"
                android:background="@color/scan_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Dinner" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="124dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.617"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Dinner" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="39dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/tag"
                android:textColor="@color/orange"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_Dinner" />
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="170dp">

            <Button
                android:id="@+id/button_history"
                android:layout_width="239dp"
                android:layout_height="53dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/my_button_bg"
                android:text="@string/history"
                android:textColor="@color/white"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.506"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/scanStatus"
                android:layout_width="179dp"
                android:layout_height="30dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/scanNotReady"
                android:textAlignment="center"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="#bdbdbd"
                app:layout_constraintBottom_toTopOf="@+id/button_history"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>